--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,10 @@
+/*Inicia Estilos Generales*/
 :root {
     --main-black: #000;
     --main-white: #f0f0f0;
     --main-red: #be3144;
+    --main-gray: #303841;
+    --main-blue: #45567d;
 
 }
 
@@ -25,12 +28,14 @@ html {
 }
 
 body {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Anton', sans-serif;
     font-size: 1.8rem;
     font-weight: 400;
     line-height: 1.4;
     color: var(--main-white);
 }
+
+/*Inicia Estilos Barra de Navegacion*/
 
 .nav {
     display: flex;
@@ -42,9 +47,10 @@ body {
     width: 100%;
     background: var(--main-red);
     box-shadow: 0 2px 0 rgb(0 0 0 / 40%);
+    z-index: 10;
 }
 
-.menu__list {
+.nav_list {
     display: flex;
     margin-right: 2rem;
 }
@@ -55,9 +61,10 @@ ul, li {
 
 li {
     display: list-item;
+    text-align: -webkit-match-parent;
 }
 
-.menu__list a {
+.nav_list a {
     display: block;
     font-size: 2.2rem;
     padding: 2rem;
@@ -66,6 +73,83 @@ li {
 a {
     text-decoration: none;
     color: var(--main-white);
+}
+
+a:hover {
+    background-color: var(--main-blue);
+}
+
+/*Welcome Section*/
+
+.welcome-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--main-black);
+    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+}
+
+h1 {
+    font-size: 6rem;
+}
+
+h1, h2 {
+    font-family: 'Anton', sans-serif;
+    font-weight: 700;
+    text-align: center;
+}
+
+.welcome-section > p {
+    font-size: 3rem;
+    font-weight: 200;
+    font-style: italic;
+    color: var(--main-red);
+}
+
+/*Projects Section*/
+
+.projects-section {
+    text-align: center;
+    padding: 10rem 2rem;
+    background: var(--main-blue);
+}
+
+.projects-title {
+    max-width: 640px;
+    margin: 0 auto 6rem auto;
+    border-bottom: 0.2rem solid var(--main-white);
+}
+
+h2 {
+    font-size: 4.2rem;
+}
+
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 4rem;
+    width: 0 auto;
+    margin-bottom: 6rem;
+}
+
+.project {
+    background: var(--main-gray);
+    box-shadow: 1px 1px 2px rgb(0 0 0 / 50%);
+    border-radius: 10px;
+}
+
+.project-image {
+    height: calc(100% - 6.8rem);
+    width: 100%;
+    object-fit: scale-down;
+}
+
+img {
+    display: block;
+    wi
 }
 
 /*Tablet*/
