--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ a {
     color: var(--main-white);
 }
 
-a:hover {
+li:hover {
     background-color: var(--main-blue);
 }
 
@@ -107,6 +107,76 @@ h1, h2 {
     font-weight: 200;
     font-style: italic;
     color: var(--main-red);
+}
+
+ /*Circulos*/
+
+ .cajaIconos{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap; 
+}
+
+.icon{
+    position:relative;
+    width: 80px;
+    height: 80px;
+    margin: 20px;
+    border-radius: 50%;
+    transition: all .8s;
+    cursor: pointer;
+}
+
+circle{
+    stroke: var(--main-white);
+    stroke-width: 4;
+    fill: none;
+}
+
+.icon:hover{
+    background-color: #71b7fb;
+    box-shadow: 0 0 20px #71b7fb;
+    
+}
+
+.icon:hover:nth-child(2){
+    background-color: black ;
+    box-shadow: 0 0 20px black;
+}
+
+.icon:hover:nth-child(3){
+    background-color: rgb(29, 155, 240);
+    box-shadow: 0 0 20px rgb(29, 155, 240);
+}
+
+.icon:hover:nth-child(4){
+    background-color: #f00;
+    box-shadow: 0 0 20px #f00;
+}
+
+.icon:hover:nth-child(5){
+    background-color: #E1306C;
+    box-shadow: 0 0 20px #E1306C;
+}
+
+.icon i{
+    color: var(--main-white);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-size: 3rem;
+}
+
+svg circle {
+    stroke-dasharray: 150;
+    transition: all .8s ease-in-out;
+}
+
+.icon:hover circle {
+    stroke-dasharray: 220;
 }
 
 /*Projects Section*/
@@ -152,7 +222,44 @@ img {
     border-radius: 10px 10px 0 0;
 }
 
+.project-title {
+    font-size: 2rem;
+    padding: 2rem 0.5rem;
+}
 
+.code {
+    color: var(--main-gray);
+    transition: color 0.3s ease-out;
+}
+
+.project:hover .code{
+    color: #ff7f50;
+    cursor:pointer
+}
+
+/*Contact Section*/
+
+.contact-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 80vh;
+    padding: 0 2rem;
+    background: var(--main-gray);
+}
+
+.contact-section > p {
+    font-size: 2.5rem;
+    font-weight: 200;
+    font-style: italic;
+    color: var(--main-red);
+}
+
+   
+
+   
 
 /*Tablet*/
 @media (min-width: 768px) {
