--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@
     --main-red: #be3144;
     --main-gray: #303841;
     --main-blue: #45567d;
+    --validation-green: #1ed12d;
+    --validation-red: #ff0000;
 
 }
 
