--- a/css/contact.css
+++ b/css/contact.css
@@ -50,6 +50,10 @@
     position: relative;
 }
 
+.form-group-input {
+
+}
+
 .form-input {
     width: 100%;
     height: 5vh;
@@ -67,7 +71,7 @@
     box-shadow: 3px 0px 30px rgba(163, 163, 163, 0.4);
 }
 
-.form-input-error-item {
+.form-input-error {
     font-size: 1.4rem;
     list-style: square inside;
     margin: 0;
@@ -75,7 +79,7 @@
     display: none;
 }
 
-.form-input-error-item-activo {
+.form-input-error-activo {
     display: block;
 }
 
@@ -83,7 +87,7 @@
     position: absolute;
     right: 10px;
     bottom: 15px;
-    font-size: 2.5rem;
+    font-size: 2rem;
     z-index: 100;
     opacity: 0;
 }
@@ -115,6 +119,7 @@
 
 .submit {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 50%;
@@ -135,12 +140,12 @@
     transition: 300ms;
 }
 
-.form-mensaje{
+.form-mensaje-alerta {
     display: none;
     color: var(--main-black);
 }
 
-.form-mensaje-error {
+.form-mensaje-alerta > p {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -153,21 +158,29 @@
     background: var(--validation-red);
 }
 
-.form-mensaje-error-activo{
+.form-mensaje-alerta-activo{
     display: block;
 }
 
-.form-mensaje-exito{
+.form-boton {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     gap: 1rem;
     line-height: 2rem;
     font-size: 1.5rem;
     font-weight: 700;
     border-radius: 4px;
+    height: auto;
+    
+}
+
+
+.form-mensaje-exito{
+    display: none;
     height: 5vh;
-    background: var(--validation-green);
+    color: var(--validation-green);
 }
 
 .form-mensaje-exito-activo{
@@ -198,7 +211,7 @@
 @media (max-width: 768px) {
    
     /*Contacto*/
-    .contact-form-left {
+    .contact-left {
         display: none;
     }
 
@@ -206,7 +219,8 @@
 
 /*Mobile*/
 @media (max-width: 425px) {
-    .contact-form-left {
+    .contact-left {
         display: none;
     }
 }
+
